<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">InfiniteTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="txt_identificador">Identificador</string>
...
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txt_username_login">Introduzca su usuario</string>
    <string name="txt_password_login">Introduzca su contraseña</string>
    <string name="btn_login">Login</string>
    <string name="txtEmailLogin">Email</string>
    <string name="loading">Cargando</string>

    <string name="btn_delete_user">ELIMINAR</string>

    <!-- Strings related to register-->
    <string name="txt_username_register">Introduzca un nombre de usuario</string>
    <string name="txt_email_register">Introduzca su correo electrónico</string>
    <string name="txt_password_register">Introduzca una contraseña</string>
    <string name="btn_register">Registrarse</string>

    <!-- Strings related to user settings -->
    <string name="txt_username">Nombre de usuario</string>
    <string name="txt_user_email">Email del usuario</string>
    <string name="txt_user_password">Contraseña del usuario</string>
    <string name="btn_edit_user">Editar</string>
...
